<resources>
    <string name="app_name">MOBILE ATM </string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_your_pin">Please enter your PIN :</string>
    <string name="balance">Balance</string>
    <string name="others">Others</string>
    <string name="ministatement">Mini Statement</string>
    <string name="transfer">Transfer</string>
    <string name="cashwithdrawl">Cash Withdraw</string>
    <string name="quickwithdraw">QuickWithdraw</string>
    <string name="cancel">cancel</string>
    <string name="please_enter_in_multiples_of_100">Enter in multiples of 100</string>
    <string name="please_collect_your_cash">Please collect your cash</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="GEOFENCINGID">atmgeofencing</string>
    <string name="enter_the_amount_to_withdraw">Enter the amount to withdraw</string>
    <string name="loading">Loading...</string>
</resources>