<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userAuthViewModel"
            type="com.proj.mobileAtm.authentication.model.viewmodel.UserAuthenticationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivBannerImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/banner"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/background_cardview"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvEnterYourPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_pin"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="italic|bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/etNumberInputBox"/>


        <EditText
            android:id="@+id/etNumberInputBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:hint="****"
            android:text="@{userAuthViewModel.enteredKey}"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:letterSpacing="0.5"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:enabled="false"
            android:textColor="@color/darkblue"
            android:paddingBottom="15dp"
            android:background="@drawable/background_password_input"
            app:layout_constraintTop_toBottomOf="@+id/ivBannerImage"
            app:layout_constraintBottom_toTopOf="@+id/keyboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include
            android:id="@+id/keyboard"
            layout="@layout/layout_common_key_board"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glGuideline"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <TextView
            android:id="@+id/tvExit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_blue_card"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/exit"
            android:textSize="18sp"
            android:onClick="@{(v)->userAuthViewModel.onCancelTransaction(v)}"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/keyboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glGuideline"/>


        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:onClick="@{(v)->userAuthViewModel.onSubmitClick(v)}"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvExit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glGuideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>